--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "main": "index.js",
   "repository": "https://github.com/NeticiLabs/NftMatcher.git",
   "author": "masonhunk <aoronchu@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5"
+  }
 }
