--- a/pkg/match-frontend/package.json
+++ b/pkg/match-frontend/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "dotenv": "^16.0.1",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.0",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
