--- a/pkg/match-frontend/package.json
+++ b/pkg/match-frontend/package.json
@@ -16,6 +16,8 @@
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.1",
     "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
+    "fse": "^4.0.1",
     "html-webpack-plugin": "^5.5.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
