--- a/pkg/match-frontend/package.json
+++ b/pkg/match-frontend/package.json
@@ -8,9 +8,11 @@
   },
   "type": "module",
   "dependencies": {
+    "@babel/core": "^7.19.0",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
     "bootstrap": "^5.2.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
